tests/typing/should_fail/constructor_wrong_name.java
package tutu.titi.toto;

class A {

    B(){}
}
